k8s/mongodb/mongo-namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: mongo-database
  labels:
    name: mongo-database
