k8s/mongodb/mongodb.yaml
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: mongodb
  namespace: mongo-database
  labels:
    app: mongodb
spec:
  replicas: 1
  selector:
    matchLabels:
      app: mongodb
  template:
    metadata:
      labels:
        app: mongodb
    spec:
      containers:
      - name: mongodb
        image: mongo:latest
        ports:
        - containerPort: 27017
        volumeMounts:
        - name: mongodb-data
          mountPath: /data/db
          subPath: data
      volumes:
        - name: mongodb-data
          persistentVolumeClaim:
                claimName: mongodb-data
---
apiVersion: v1
kind: Service
metadata:
  name: mongodb-service
  namespace: mongo-database
  labels:
    app: mongodb
spec:
  selector:
    app: mongodb
  ports:
  - port: 27017
    protocol: TCP
